# nadoeda

./: .gitignore  Cargo.toml  README.md  appsettings.toml  flake.nix
nadoeda_models/: Cargo.toml
nadoeda_models/src/: lib.rs  reminder.rs  settings.rs  user.rs
nadoeda_scheduler/: Cargo.toml
nadoeda_scheduler/delivery_scheduler/: Cargo.toml
nadoeda_scheduler/delivery_scheduler/src/: delivery.rs  lib.rs  tests.rs
nadoeda_scheduler/delivery_scheduler/src/tests/: delivery_scheduler_tests.rs  target_datetime_tests.rs
nadoeda_scheduler/src/: common.rs  delivery.rs  delivery_reminder_scheduler.rs  lib.rs  manager.rs  managerv2.rs  mod.rs  scheduler.rs
nadoeda_scheduler/src/delivery_reminder_scheduler/: delivery.rs  tests.rs
nadoeda_scheduler/src/delivery_reminder_scheduler/tests/: delivery_scheduler_tests.rs
nadoeda_scheduler/src/manager/: simple_reminder_scheduler.rs
nadoeda_scheduler/src/manager/simple_reminder_scheduler/: delivery.rs  tests.rs
nadoeda_scheduler/src/managerv2/: mod.rs  simple_reminder_scheduler.rs
nadoeda_scheduler/src/managerv2/simple_reminder_scheduler/: tests.rs
nadoeda_scheduler/src/managerv2/simple_reminder_scheduler/tests/: target_datetime_tests.rs
nadoeda_storage/: Cargo.toml
nadoeda_storage/.sqlx/: query-0a3dc10a51d00bfe53dff232f6d44fc13310b9f353d5ed9d0d0c616563aa3acd.json  query-0e64810b135e77ce55fdf04a0a4877e54a60252721e474c1780f188ae2bf0166.json  query-1b40d1c9dfd7a5f9b27fc82243e1f25e1de0963f654e4944f0c4fe0ce4db3380.json  query-2bee58b4670e46bb03b60edcf634bb97c0df00519d0cf17ea6e130a0b1a6ec85.json  query-607397c7276859ad8e4a1c4961a577966208572f1a68c4611cdf52cc069c27cc.json  query-b8cafe67d8e425ac195f5c8c9e70c8ec9cade8b0818d3a7718ca6eaa74fdcd0a.json  query-d19f8f12befc351551b603de58ca6b900aeff4f966155d4cd6fb4259a99a6376.json  query-d1ec24bdafb79996d598fd0707064fc6766042c1054c8ca379da5fc6a3a03e5a.json  query-db4cfa73b678df55d584c46c9b6a2c180b914b1686de0f3f624616524f9f87a6.json  query-f4b9bb550a9ca9b70ce477715c5af1d5993276d87cb1732470e23994fd378475.json
nadoeda_storage/migrations/: 20251019092850_InitialMigration.sql
nadoeda_storage/src/: lib.rs  model.rs  reminder.rs  reminder_storage.rs  sqlite.rs  user.rs
nadoeda_storage/src/sqlite/: reminder_storage.rs  user_storage.rs
nadoeda_storage/src/sqlite/reminder_storage/: model.rs
nadoeda_storage/src/sqlite/user_storage/: model.rs
nadoeda_telegram/: Cargo.toml
nadoeda_telegram/src/: authenticate_user.rs  create_daily_reminder.rs  delivery.rs  delivery_channel.rs  edit_reminders.rs  lib.rs  mod.rs  test_utils.rs  tests.rs  ui.rs  util.rs
nadoeda_telegram/src/tests/: authenticate_user_tests.rs  create_reminder_tests.rs  test_utils.rs
nadoeda_telegram/src/ui/: authenticate_user.rs  create_daily_reminder.rs  edit_reminders.rs  tests.rs  util.rs
nadoeda_telegram/src/ui/tests/: authenticate_user_tests.rs  create_reminder_tests.rs  test_utils.rs
proptest-regressions/: main.txt
src/: appsettings.rs  common.rs  main.rs  manager.rs  reminder.rs  reminder_storage.rs  scheduler.rs  telegram_bot.rs  worker.rs
src/actor/: mod.rs
src/scheduling/: common.rs  manager.rs  managerv2.rs  mod.rs  scheduler.rs  worker.rs
src/scheduling/managerv2/: actor_scheduler.rs  actor_scheduler_state.rs  actor_scheduler_task.rs  mod.rs  scheduled_reminder_actor.rs  simple_reminder_scheduler.rs
src/storage/: mod.rs  model.rs  reminder_storage.rs
src/telegram/: create_daily_reminder.rs  create_reminder.rs  delivery_channel.rs  edit_reminders.rs  mod.rs
src/users/: mod.rs
