[package]
name = "nadoeda"
version = "0.1.0"
edition = "2024"

[dependencies]
# diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
# build libsqlite3 as part of the build process
# uncomment this line if you run into setup issues
# libsqlite3-sys = { version = "0.30", features = ["bundled"] }
dotenvy = "0.15"
tokio = { version = "1", features = ["full", "test-util"] }
chrono =  {version = "0.4.41", features = ["arbitrary"] }
chrono-tz = "0.10.3"
tokio-util = "0.7.15"
anyhow = "1.0.98"
config = "0.15.11"
serde = { version = "1.0.219", features = ["derive"] }
teloxide = { version = "0.17.0", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
async-trait = "0.1.88"

[dev-dependencies]
proptest  = "1"
proptest-arbitrary-interop = "0.1.0"
teloxide_tests = "0.4.0"
