[package]
name = "nadoeda_models"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
chrono-tz = { version = "0.10.4", features = ["case-insensitive", "serde"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["chrono", "derive", "macros", "migrate", "runtime-tokio", "sqlite", "tls-native-tls", "uuid"] }
