[package]
name = "nadoeda_storage"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-trait = "0.1.89"
log = "0.4"
nadoeda_models = { version = "0.1.0", path = "../nadoeda_models" }
tokio = {version = "1", features=["sync"] }
sqlx = { version = "0.8.6", features = ["chrono", "derive", "macros", "migrate", "runtime-tokio", "sqlite", "tls-native-tls"] }
thiserror = "2.0.17"

[dev-dependencies]
proptest  = "1"
proptest-arbitrary-interop = "0.1.0"
test-strategy = "0.4.3"


