[package]
name = "nadoeda_telegram"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
teloxide = { version = "0.17.0", features = ["macros"] }
serde = { version = "1.0.219", features = ["derive"] }
log = "0.4"
chrono = "0.4.42"
tokio = { version = "1", features = ["full", "test-util"] }
nadoeda_models = {  path = "../nadoeda_models" }
nadoeda_storage = {  path = "../nadoeda_storage" }
nadoeda_scheduler = {  path = "../nadoeda_scheduler" }
sqlx = { version = "0.8.6", features = ["chrono", "derive", "macros", "migrate", "runtime-tokio", "sqlite", "tls-native-tls"] }
async-trait = "0.1.89"
thiserror = "2.0.17"


[dev-dependencies]
teloxide_tests = "0.4.0"
nadoeda_scheduler = { path = "../nadoeda_scheduler", features = ["test-util"] }
